idt-infrastructure/kubernetes/prod/05-ingress/ingress.prod.controller.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: idt-ingress
  namespace: idt
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - idt.in.tum.de
    secretName: idt-tls-secret
  rules:
    - host: idt.in.tum.de
      http:
        paths:
        - path: /daemon
          backend:
            serviceName: idtdaemon
            servicePort: 80
    - host: idt.in.tum.de
      http:
        paths:
        - path: /api
          backend:
            serviceName: idtapi
            servicePort: 80
    - host: idt.in.tum.de
      http:
        paths:
        - path: /
          backend:
            serviceName: idtweb
            servicePort: 80
